WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
314503
[:has()] Invalidation fails with some complex nested cases with :is()
https://bugs.webkit.org/show_bug.cgi?id=314503
Summary
[:has()] Invalidation fails with some complex nested cases with :is()
Antti Koivisto
Reported
2026-05-10 00:28:52 PDT
Fix invalidation bugs
Attachments
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2026-05-10 00:29:05 PDT
<
rdar://problem/176719780
>
Antti Koivisto
Comment 2
2026-05-10 00:41:09 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/64632
EWS
Comment 3
2026-05-10 08:19:58 PDT
Committed
312966@main
(fada6de9d9a6): <
https://commits.webkit.org/312966@main
> Reviewed commits have been landed. Closing PR #64632 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug